fixed spacing on phone dimensions

--- a/style.css
+++ b/style.css
@@ -125,16 +125,16 @@ span.icon-links {
   .grid-item-2 {
     grid-row: 1 / 2;
     align-self: start;
-    padding-top: 15px;
+    padding-top: 10px;
   }
   .grid-item-3 {
     grid-row: 1 / 2;
     align-self: end;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-bottom: 0px;
   }
   .grid-item-4 {
-    padding: 0px 10px 70px 10px;
+    padding: 0px 10px 80px 10px;
     grid-row: 2 / 4;
     grid-column: 1 / 2;
   }
